--- a/style.css
+++ b/style.css
@@ -1,85 +1,162 @@
-body{
+body {
     padding: 0;
     margin: 0;
-    font-family: Helvetica;
+    font-family: Helvetica, Arial, sans-serif;
+
+    background-color: #947047;
 }
 
-/*===================== HEADER*/
+/*===================== HEADER */
 
-#header{
-position: fixed;
-top: 0px;
-left: 0px;
-z-index: 500;
-width: 100%;
-height: 80px;
+#header {
+    position: fixed;
+    top: 0px;
+    left: 0px;
+    z-index: 500;
+    width: 100%;
+    height: 80px;
+    background-color: white;
 }
 
-#header img{
-    display:block;
-    margin:auto;
-    height: 70%;
-    width: 10%;
-    padding-top: 0px;
+#header img {
+    display: block;
+    margin: auto;
+    height: 100%;
+    width: 25%;
+    padding-top: 5px;
 }
 
-/*===================== TOP TABS*/
+/*===================== TOP TABS */
 
-#top-tabs{
+#top-tabs {
     position: fixed;
     top: 80px;
     left: 0;
     z-index: 500;
-    width:100%;
+    width: 100%;
     height: 40px;
-    background-color: grey;
+    background-color: #302a23;
 }
 
-#top-tabs a{
+#top-tabs a {
     float: left;
     display: block;
     width: 25%;
     height: 35px;
     font-weight: 700;
-    color:white;
+    color: white;
     text-align: center;
     text-decoration: none;
     padding-top: 12px;
 }
 
-/*======================= MAIN-HOME*/
+/*======================= MAIN AREAS */
 
-#main-home{
-    margin-top:120px;
-    width:100%;
+#main, #main-home {
+    margin-top: 140px; 
+    width: 100%;
+    padding-bottom: 60px; /* prevents footer overlap */
 }
 
-/*======================= BOTTOM-TABS*/
-
-#bottom-tabs{
-position: fixed;
-bottom: 0;
-left: 0;
-z-index: 500;
-width: 100%;
-height: 40px;
-background-color: grey;
+#main img {
+    margin: 5px;
 }
 
-#bottom-tabs a{
-float: left;
-display: block;
-width: 50%;
-height: 35px;
-font-weight: 700;
-color: white;
-text-align: center;
-text-decoration: none;
-padding-top: 12px;
+/*======================= BOTTOM TABS */
+
+#bottom-tabs {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    z-index: 500;
+    width: 100%;
+    height: 40px;
+    background-color: #302a23;
 }
 
-/*======================= MAIN*/
-#main{
-    margin-top:120px;
-    width:100%;
+#bottom-tabs a {
+    float: left;
+    display: block;
+    width: 50%;
+    height: 35px;
+    font-weight: 700;
+    color: white;
+    text-align: center;
+    text-decoration: none;
+    padding-top: 12px;
+}
+
+/*======================= STORE LIST PAGE */
+
+#main a img {
+    vertical-align: middle;
+    margin-right: 10px;
+}
+
+#main a {
+    display: block;
+    padding: 10px 0;
+    font-size: 18px;
+    color: black;
+    text-decoration: none;
+}
+
+#main h2, #main h3 {
+    padding-left: 10px;
+}
+
+/*======================= MOVIE LIST PAGE */
+
+.movie-card {
+    padding: 10px;
+    margin-bottom: 20px;
+}
+
+.movie-card img {
+    width: 100%;
+    border-radius: 6px;
+}
+
+.movie-card p {
+    font-size: 16px;
+    padding: 5px;
+}
+
+/*======================= BUTTON STYLE */
+
+.button {
+    display: inline-block;
+    background-color: #333;
+    color: white;
+    padding: 10px 20px;
+    text-decoration: none;
+    font-weight: bold;
+    border-radius: 6px;
+}
+
+.button:hover {
+    background-color: #555;
+}
+
+/*======================= CONTACT FORM */
+
+#contact-box {
+    width: 80%;
+    margin: auto;
+    text-align: center;
+}
+
+#contact-box input,
+#contact-box textarea {
+    width: 80%;
+    padding: 12px;
+    margin: 10px 0;
+    border: 1px solid #aaa;
+    border-radius: 5px;
+}
+
+/*======================= IMAGE GRIDS */
+
+#main img {
+    border-radius: 6px;
 }
